tests/golden/errors/needless_continuation.stderr
error[formatting]: needless continuation: this statement fits on one line (34 characters)
  --> needless_continuation.kso:3:5
   3 |     . sum
           ^
